--- a/public/css/application.css
+++ b/public/css/application.css
@@ -13,6 +13,30 @@
   text-align: center;
 }
 
-th {
+.task-container {
+  margin: 20px auto;
+  width: 500px;
+  padding: 0px 20px 20px 20px;
+  text-align: center;
+  border: 3px solid black;
+}
+
+li {
+  margin: 20px;
   text-align: left;
+}
+
+.task-list {
+  list-style: none;
+}
+
+#checkboxes {
+  margin-right: 10px;
+  list-style: none;
+  float: left;
+}
+#Twitter_button {
+    position: absolute;
+    top: 50px;
+    left:800px;
 }
