--- a/public/css/application.css
+++ b/public/css/application.css
@@ -1,6 +1,7 @@
 .main {
+  background-image: url("http://sociable.co/wp-content/uploads/2012/12/twitter-bird-blue.gif");
   margin: 20px auto;
-  width: 800px;
+  width: 64%;
   padding: 0px 20px 20px 20px;
   border: 3px solid black;
   text-align: center;
@@ -14,8 +15,9 @@
 }
 
 .task-container {
+  background: white;
   margin: 20px auto;
-  width: 500px;
+  width: 90%;
   padding: 0px 20px 20px 20px;
   text-align: center;
   border: 3px solid black;
@@ -35,8 +37,32 @@ li {
   list-style: none;
   float: left;
 }
+
 #Twitter_button {
     position: absolute;
     top: 50px;
     left:800px;
 }
+
+.add-task {
+  margin-top: 10px;
+}
+
+.task-button {
+  -webkit-border-radius: 28;
+  -moz-border-radius: 28;
+  border-radius: 28px;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 13px;
+  background: #3498db;
+  padding: 6px 10px 6px 10px;
+  text-decoration: none;
+}
+
+.task-button:hover {
+  background: #3cb0fd;
+  text-decoration: none;
+}
+
+
