adds bird animation

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -26,5 +26,12 @@
     <% end %>
   </header>
   <%= yield %>
+  <script type="text/javascript" src="http://btsnts.googlecode.com/files/btsnts-tripleflap.js">
+</script>
+<script type="text/javascript">
+var twitterAccount = "devbootcamp";
+var tweetThisText = "I love Compweet!";
+tripleflapInit();
+</script>
 </body>
 </html>
