--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -1,7 +1,7 @@
 <div class="main">
 
   <div class="title-section">
-    <h1> It's time to Compweet Your Twasks! </h1>
+    <h1> It's time to Compweet Your Tasks! </h1>
     <div class="task-container">
       <form action="/tasks" method="post">
       <input class="add-task" type="text" name="task[description]" placeholder="put your twask here!">
@@ -26,6 +26,8 @@
   </div>
 
 </div>
+
+
 
 
 
