--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -1,7 +1,7 @@
 <div class="main">
 
   <div class="title-section">
-    <h1> It's time to Compweet Your Tasks! </h1>
+    <h1> It's time to Compweet Your Twasks! </h1>
     <div class="task-container">
       <form action="/tasks" method="post">
       <input class="add-task" type="text" name="task[description]" placeholder="put your twask here!">
@@ -10,15 +10,19 @@
     </form>
       <ul class="task-list">
         <% current_user.tasks.each do |task| %>
-          <input id="checkboxes" type="checkbox">
-            <li class="task">
+        <li class="task">
+          <form action="/tasks/<%=task.id%>/edit" method="post" class="checkboxform">
+          <input type="hidden" name="_method" value="put">
+            <label for="option">
+                <input class="checkboxes" id="<%=task.id%>" type="checkbox" <%="checked" if task.completed %>>
+            </label>
               <%= task.description %>
-              <!-- <form action="/tasks" method="post"><input name="_method" type="hidden" value="delete" /></form> -->
-            <a id="Twitter_button" href="https://twitter.com/share?url=www.compweeted.com&text=I just finished <%= task.description %>! <%=
+                <a id="Twitter_button" href="https://twitter.com/share?url=www.compweeted.com&text=I just finished <%= task.description %>! <%=
             task.tweet_to %>" class="twitter-share-button">Tweet</a>
 
               <script type="text/javascript" src="http://platform.twitter.com/widgets.js">
               </script>
+          </form>
             </li>
         <% end %>
       </ul>
@@ -26,8 +30,6 @@
   </div>
 
 </div>
-
-
 
 
 
