adding landing page and main page styling

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,1 +1,4 @@
-HI!
+<div class="login-container">
+  <h1>Welcome to Compweet!</h1>
+  <h4>By: <a href="https://github.com/bcahill">Bridget Cahill</a>, <a href="https://github.com/cstavitsky">Chris Stavitsky</a>, <a href="https://github.com/dpasie2">Davina Pasiewicz</a>, and <a href="https://github.com/alita42">Blanche Hollingshead</a>
+</div>
