--- a/public/css/application.css
+++ b/public/css/application.css
@@ -1,15 +1,24 @@
-.main {
+.login-container {
   background-image: url("http://sociable.co/wp-content/uploads/2012/12/twitter-bird-blue.gif");
   margin: 20px auto;
   width: 64%;
   padding: 0px 20px 20px 20px;
-  border: 3px solid black;
+  border: 3px solid #000052;
+  text-align: center;
+}
+
+.main {
+  background-image: url("http://sociable.co/wp-content/uploads/2012/12/twitter-bird-blue.gif");
+  margin: 20px auto;
+  width: 74%;
+  padding: 0px 20px 20px 20px;
+  border: 3px solid #000052;
   text-align: center;
 }
 
 .title-section{
   margin: 20px auto;
-  width: 600px;
+  width: 750px;
   padding: 0px 20px 20px 20px;
   text-align: center;
 }
@@ -17,7 +26,7 @@
 .task-container {
   background: white;
   margin: 20px auto;
-  width: 90%;
+  width: 70%;
   padding: 0px 20px 20px 20px;
   text-align: center;
   border: 3px solid black;
@@ -64,5 +73,41 @@ li {
   background: #3cb0fd;
   text-decoration: none;
 }
+
+body {
+  background-color: #97D5FF;
+}
+header a {
+  font-size: 2.3em;
+  font-weight: bolder;
+  color: #FF9900;
+  text-decoration: none;
+  margin-left: 0%;
+}
+
+h4 a {
+  text-decoration: none;
+  color: #FF9900;
+}
+h4 {
+  text-decoration: none;
+  color: #FF9900;
+}
+h1 {
+  color: #FF9900;
+  font-size: 3em;
+  font-weight: bolder;
+}
+
+html {
+  font-family: 'Catamaran', sans-serif;
+}
+
+.title-section h1 {
+  color: #FF9900;
+  font-size: 2.5em;
+  font-weight: bolder;
+}
+
 
 
